--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@headlessui/react": "^2.1.10",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.2",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18"
