--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mongoose": "^8.8.2",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.7.0",
+    "sooner": "^1.1.4"
   },
   "devDependencies": {
     "eslint": "^8",
